# eda-app

./: .gitignore  CHECKLIST.md  CMakeLists.txt  LICENSE  README.md  REPORT.md  SETUP_GUIDE.md  version.h.in
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: DEVELOPMENT.md  GIT_WORKFLOW.md  SETUP.md
docs/requirements/: README.md
docs/requirements/00-master/: 001-project-overview.md  002-architecture.md
docs/requirements/01-layout/: 001-layout-editor.md
docs/requirements/02-ui/: 001-main-window.md  002-dock-widgets.md  003-project-tree.md  004-layer-manager.md
docs/requirements/03-plugin/: 001-plugin-framework.md
docs/requirements/04-data/: 001-gdsii-support.md
docs/requirements/05-non-functional/: 001-performance.md
include/drc/: drc_engine.h  drc_types.h
include/layout/: layout_cell.h  layout_database.h  layout_types.h
include/plugin/: plugin_interface.h  plugin_loader.h  plugin_manager.h
include/ui/: layout_canvas.h  mainwindow.h  project_tree.h  property_editor.h
scripts/: build.ps1  setup-branch-protection.ps1  setup-github.ps1  setup-permissions.ps1  setup-team.ps1  setup-token.ps1
src/: main.cpp  mainwindow.cpp
src/drc/: drc_engine.cpp  drc_rules.cpp
src/layout/: layout_cell.cpp  layout_database.cpp  layout_types.cpp
src/plugin/: plugin_loader.cpp  plugin_manager.cpp
src/ui/: layout_canvas.cpp  mainwindow.cpp  project_tree.cpp  property_editor.cpp
tests/: CMakeLists.txt  test_layout_core.cpp  test_main.cpp
